--- a/views/user/forgPassOtpEnter.ejs
+++ b/views/user/forgPassOtpEnter.ejs
@@ -87,8 +87,8 @@
     <div class="container center-div">
         <div class="border border-dark py-5 px-3 col-lg-4 col-md-6 col-sm-8">
             <div class="title pb-4 text-center">
-                <h2 class="font-weight-bold" style="color: rgb(255, 255, 255);">Lost Password? </h2>
-                <span style="font-size: small; color: #ffffff;">Enter Your Registered Email Address</span>
+                <h2 class="font-weight-bold" style="color: rgb(255, 255, 255);">OTP</h2>
+                <span style="font-size: small; color: #ffffff;">Enter Otp Send To Your Registered Email Address</span>
 
                 
             </div>
